--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>BlogForm</title>
+    <title>ブログフォーム</title>
   </head>
   <body>
     <h2>ブログフォーム</h2>
@@ -25,5 +25,6 @@
       <br />
       <input type="submit" value="送信" />
     </form>
+    <p><a href="./">戻る</a></p>
   </body>
 </html>
